# otus_cpp_9

./: CMakeLists.txt  README.md  main.cpp  rai_concept.cpp  rai_concept.h
.github/workflows/: release.yml
